Fixed alignment on products-header

--- a/css/products.css
+++ b/css/products.css
@@ -5,6 +5,7 @@
   box-shadow: 0px 5px 15px rgba(0,0,0,0.1);
   margin: 40px auto;
   padding: 40px;
+  text-align: center;
 }
 
 .filters {
